fixing normalize method , deviding both x and y coordinates by the same factor for consistency

--- a/norm_sort.ipynb
+++ b/norm_sort.ipynb
@@ -44,8 +44,9 @@
     "        \"\"\"Normalize x coordinates from 0 to 1, and center y about 0\"\"\"\n",
     "        x_min = np.min(self.x)\n",
     "        x_max = np.max(self.x)\n",
-    "        self.x = (self.x - x_min) / (x_max - x_min)\n",
-    "        self.y = self.y - np.mean(self.y)\n",
+    "        factor = x_max-x_min\n",
+    "        self.x = (self.x - x_min) / (factor)\n",
+    "        self.y = (self.y - np.mean(self.y) ) /\n",
     "        return self \n",
     "    \n",
     "\n",
@@ -2696,6 +2697,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "91daf515-924c-4f37-a377-855dc9c68cca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a636848-ae8d-4eda-9f79-1bbf403b4658",
    "metadata": {},
    "outputs": [],
    "source": []
